--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-<a href="#">Home</a> | <a href="#">About</a> | <a href="#">Products</a>  | <a href="#">Contact</a>
+<a href="#a">Home</a> | <a href="#b">About</a> | <a href="#c">Products</a>  | <a href="#d">Contact</a>
 
     </nav>
 
